--- a/18. Machine Learning Applications/18.2 Model Optimization/Bayesian Optimization Case Study/Bayesian_optimization_case_study.ipynb
+++ b/18. Machine Learning Applications/18.2 Model Optimization/Bayesian Optimization Case Study/Bayesian_optimization_case_study.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T16:39:09.312682Z",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -78,16 +78,16 @@
     {
      "data": {
       "text/plain": [
-       "['.config',\n",
-       " 'flight_delays_test.csv.zip',\n",
-       " 'flight_delays_train.csv.zip',\n",
-       " 'sample_data']"
+       "['.DS_Store',\n",
+       " '.gitignore',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'Bayesian_optimization_case_study.ipynb',\n",
+       " 'flight_delays_test.csv',\n",
+       " 'flight_delays_train.csv']"
       ]
      },
-     "execution_count": 45,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 3,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -249,11 +249,11 @@
      "text": [
       "|   iter    |  target   |     a     |     b     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[0m 1       \u001b[0m | \u001b[0m 7.847   \u001b[0m | \u001b[0m 1.67    \u001b[0m | \u001b[0m 6.177   \u001b[0m |\n",
-      "| \u001b[0m 2       \u001b[0m | \u001b[0m 7.075   \u001b[0m | \u001b[0m 1.418   \u001b[0m | \u001b[0m 5.657   \u001b[0m |\n",
-      "| \u001b[0m 3       \u001b[0m | \u001b[0m 7.476   \u001b[0m | \u001b[0m 2.129   \u001b[0m | \u001b[0m 5.348   \u001b[0m |\n",
-      "| \u001b[95m 4       \u001b[0m | \u001b[95m 10.0    \u001b[0m | \u001b[95m 3.0     \u001b[0m | \u001b[95m 7.0     \u001b[0m |\n",
-      "| \u001b[0m 5       \u001b[0m | \u001b[0m 9.387   \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 6.387   \u001b[0m |\n",
+      "| \u001b[0m 1       \u001b[0m | \u001b[0m 6.604   \u001b[0m | \u001b[0m 1.74    \u001b[0m | \u001b[0m 4.864   \u001b[0m |\n",
+      "| \u001b[0m 2       \u001b[0m | \u001b[0m 6.45    \u001b[0m | \u001b[0m 2.097   \u001b[0m | \u001b[0m 4.353   \u001b[0m |\n",
+      "| \u001b[0m 3       \u001b[0m | \u001b[0m 6.18    \u001b[0m | \u001b[0m 2.02    \u001b[0m | \u001b[0m 4.16    \u001b[0m |\n",
+      "| \u001b[95m 4       \u001b[0m | \u001b[95m 9.329   \u001b[0m | \u001b[95m 2.76    \u001b[0m | \u001b[95m 6.568   \u001b[0m |\n",
+      "| \u001b[0m 5       \u001b[0m | \u001b[0m 8.63    \u001b[0m | \u001b[0m 1.63    \u001b[0m | \u001b[0m 7.0     \u001b[0m |\n",
       "=================================================\n"
      ]
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -289,19 +289,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': 3.0, 'b': 7.0}\n"
+      "{'a': 2.760372985277513, 'b': 6.56830661162787}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "10.0"
+       "9.328679596905383"
       ]
      },
-     "execution_count": 49,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 7,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -341,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -349,8 +347,8 @@
    },
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('flight_delays_train.csv.zip')\n",
-    "test_df = pd.read_csv('flight_delays_test.csv.zip')"
+    "train_df = pd.read_csv('flight_delays_train.csv')\n",
+    "test_df = pd.read_csv('flight_delays_test.csv')"
    ]
   },
   {
@@ -365,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -474,20 +472,23 @@
        "</div>"
       ],
       "text/plain": [
-       "  Month DayofMonth DayOfWeek  DepTime  ... Origin Dest Distance  dep_delayed_15min\n",
-       "0   c-8       c-21       c-7     1934  ...    ATL  DFW      732                  N\n",
-       "1   c-4       c-20       c-3     1548  ...    PIT  MCO      834                  N\n",
-       "2   c-9        c-2       c-5     1422  ...    RDU  CLE      416                  N\n",
-       "3  c-11       c-25       c-6     1015  ...    DEN  MEM      872                  N\n",
-       "4  c-10        c-7       c-6     1828  ...    MDW  OMA      423                  Y\n",
+       "  Month DayofMonth DayOfWeek  DepTime UniqueCarrier Origin Dest  Distance  \\\n",
+       "0   c-8       c-21       c-7     1934            AA    ATL  DFW       732   \n",
+       "1   c-4       c-20       c-3     1548            US    PIT  MCO       834   \n",
+       "2   c-9        c-2       c-5     1422            XE    RDU  CLE       416   \n",
+       "3  c-11       c-25       c-6     1015            OO    DEN  MEM       872   \n",
+       "4  c-10        c-7       c-6     1828            WN    MDW  OMA       423   \n",
        "\n",
-       "[5 rows x 9 columns]"
+       "  dep_delayed_15min  \n",
+       "0                 N  \n",
+       "1                 N  \n",
+       "2                 N  \n",
+       "3                 N  \n",
+       "4                 Y  "
       ]
      },
-     "execution_count": 51,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 9,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -507,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -600,10 +601,8 @@
        "max      2534.000000    4962.00000"
       ]
      },
-     "execution_count": 52,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 10,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -633,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:38:42.677690Z",
@@ -645,7 +644,7 @@
    },
    "outputs": [],
    "source": [
-    "#train_df = train_df[train_df.DepTime <= 2400].copy()\n",
+    "train_df = train_df[train_df.DepTime <= 2400].copy()\n",
     "y_train = train_df['dep_delayed_15min'].map({'Y': 1, 'N': 0}).values"
    ]
   },
@@ -662,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -727,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -751,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -776,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -800,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T14:31:58.412296Z",
@@ -859,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:40:14.034265Z",
@@ -910,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:48:04.682447Z",
@@ -930,7 +929,21 @@
      "output_type": "stream",
      "text": [
       "|   iter    |  target   | lambda_l1 | lambda_l2 | max_depth | min_ch... | min_da... | num_le... |\n",
-      "-------------------------------------------------------------------------------------------------\n"
+      "-------------------------------------------------------------------------------------------------\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=139, min_child_samples=1966 will be ignored. Current value: min_data_in_leaf=139\n",
+      "| \u001b[0m 1       \u001b[0m | \u001b[0m 0.7219  \u001b[0m | \u001b[0m 0.000441\u001b[0m | \u001b[0m 0.003912\u001b[0m | \u001b[0m 41.17   \u001b[0m | \u001b[0m 1.966e+0\u001b[0m | \u001b[0m 139.4   \u001b[0m | \u001b[0m 1.858e+0\u001b[0m |\n",
+      "| \u001b[95m 2       \u001b[0m | \u001b[95m 0.7283  \u001b[0m | \u001b[95m 0.03439 \u001b[0m | \u001b[95m 0.02604 \u001b[0m | \u001b[95m 61.02   \u001b[0m | \u001b[95m 9.427e+0\u001b[0m | \u001b[95m 875.5   \u001b[0m | \u001b[95m 3.353e+0\u001b[0m |\n",
+      "| \u001b[95m 3       \u001b[0m | \u001b[95m 0.7288  \u001b[0m | \u001b[95m 0.03729 \u001b[0m | \u001b[95m 0.04445 \u001b[0m | \u001b[95m 10.29   \u001b[0m | \u001b[95m 2.428e+0\u001b[0m | \u001b[95m 822.1   \u001b[0m | \u001b[95m 2.002e+0\u001b[0m |\n",
+      "| \u001b[95m 4       \u001b[0m | \u001b[95m 0.7435  \u001b[0m | \u001b[95m 0.004009\u001b[0m | \u001b[95m 0.02859 \u001b[0m | \u001b[95m 32.72   \u001b[0m | \u001b[95m 9.914e+0\u001b[0m | \u001b[95m 1.179e+0\u001b[0m | \u001b[95m 201.0   \u001b[0m |\n",
+      "| \u001b[0m 5       \u001b[0m | \u001b[0m 0.7281  \u001b[0m | \u001b[0m 0.01489 \u001b[0m | \u001b[0m 0.04385 \u001b[0m | \u001b[0m 16.58   \u001b[0m | \u001b[0m 4.792e+0\u001b[0m | \u001b[0m 892.1   \u001b[0m | \u001b[0m 3.716e+0\u001b[0m |\n",
+      "| \u001b[95m 6       \u001b[0m | \u001b[95m 0.7444  \u001b[0m | \u001b[95m 0.007502\u001b[0m | \u001b[95m 0.02448 \u001b[0m | \u001b[95m 41.93   \u001b[0m | \u001b[95m 9.688e+0\u001b[0m | \u001b[95m 1.746e+0\u001b[0m | \u001b[95m 395.6   \u001b[0m |\n",
+      "| \u001b[0m 7       \u001b[0m | \u001b[0m 0.7437  \u001b[0m | \u001b[0m 0.03014 \u001b[0m | \u001b[0m 0.03662 \u001b[0m | \u001b[0m 55.02   \u001b[0m | \u001b[0m 8.144e+0\u001b[0m | \u001b[0m 1.179e+0\u001b[0m | \u001b[0m 143.2   \u001b[0m |\n",
+      "| \u001b[0m 8       \u001b[0m | \u001b[0m 0.7443  \u001b[0m | \u001b[0m 0.02075 \u001b[0m | \u001b[0m 0.02179 \u001b[0m | \u001b[0m 34.04   \u001b[0m | \u001b[0m 5.854e+0\u001b[0m | \u001b[0m 1.997e+0\u001b[0m | \u001b[0m 60.95   \u001b[0m |\n",
+      "| \u001b[0m 9       \u001b[0m | \u001b[0m 0.7443  \u001b[0m | \u001b[0m 0.02627 \u001b[0m | \u001b[0m 0.03494 \u001b[0m | \u001b[0m 17.21   \u001b[0m | \u001b[0m 508.4   \u001b[0m | \u001b[0m 1.445e+0\u001b[0m | \u001b[0m 881.8   \u001b[0m |\n",
+      "| \u001b[0m 10      \u001b[0m | \u001b[0m 0.7442  \u001b[0m | \u001b[0m 0.0158  \u001b[0m | \u001b[0m 0.02359 \u001b[0m | \u001b[0m 55.91   \u001b[0m | \u001b[0m 2.381e+0\u001b[0m | \u001b[0m 1.92e+03\u001b[0m | \u001b[0m 3.166e+0\u001b[0m |\n",
+      "| \u001b[0m 11      \u001b[0m | \u001b[0m 0.7259  \u001b[0m | \u001b[0m 0.0183  \u001b[0m | \u001b[0m 0.03324 \u001b[0m | \u001b[0m 46.81   \u001b[0m | \u001b[0m 5.765e+0\u001b[0m | \u001b[0m 638.1   \u001b[0m | \u001b[0m 1.459e+0\u001b[0m |\n",
+      "| \u001b[0m 12      \u001b[0m | \u001b[0m 0.719   \u001b[0m | \u001b[0m 0.008224\u001b[0m | \u001b[0m 0.02346 \u001b[0m | \u001b[0m 41.59   \u001b[0m | \u001b[0m 6.179e+0\u001b[0m | \u001b[0m 420.1   \u001b[0m | \u001b[0m 1.728e+0\u001b[0m |\n",
+      "=================================================================================================\n"
      ]
     }
    ],
@@ -958,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:49:01.513767Z",
@@ -968,7 +981,24 @@
     "colab_type": "code",
     "id": "oc8z6mfy-KZS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 0.7444391084547489,\n",
+       " 'params': {'lambda_l1': 0.007501822660575131,\n",
+       "  'lambda_l2': 0.024477094746991696,\n",
+       "  'max_depth': 41.92800481032551,\n",
+       "  'min_child_samples': 9688.0246811735,\n",
+       "  'min_data_in_leaf': 1745.5965378853039,\n",
+       "  'num_leaves': 395.59590738426283}}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lgbBO.max"
    ]
@@ -989,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:51:01.001688Z",
@@ -999,9 +1029,61 @@
     "colab_type": "code",
     "id": "X1ttZmrI-KZX"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 0.7218512620304937,\n",
+       " 'params': {'lambda_l1': 0.0004418056687608696,\n",
+       "  'lambda_l2': 0.003912399411855938,\n",
+       "  'max_depth': 41.170662202125214,\n",
+       "  'min_child_samples': 1966.057091436937,\n",
+       "  'min_data_in_leaf': 139.44726177465722,\n",
+       "  'num_leaves': 1857.917587374538}}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lgbBO.res[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-22T15:51:01.001688Z",
+     "start_time": "2019-04-22T15:51:00.997484Z"
+    },
+    "colab": {},
+    "colab_type": "code",
+    "id": "X1ttZmrI-KZX"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 0.7444391084547489,\n",
+       " 'params': {'lambda_l1': 0.007501822660575131,\n",
+       "  'lambda_l2': 0.024477094746991696,\n",
+       "  'max_depth': 41.92800481032551,\n",
+       "  'min_child_samples': 9688.0246811735,\n",
+       "  'min_data_in_leaf': 1745.5965378853039,\n",
+       "  'num_leaves': 395.59590738426283}}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimized = lgbBO.res[5]\n",
+    "optimized"
    ]
   }
  ],
@@ -1012,7 +1094,7 @@
   },
   "deepnote_execution_queue": [],
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1026,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.13"
   },
   "varInspector": {
    "cols": {
