pre-optimization updates

--- a/Capstone Two/Diabetic Patient Readmission - Pre-processing, Training Data Development, and Initial Models.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Pre-processing, Training Data Development, and Initial Models.ipynb
@@ -1066,7 +1066,7 @@
    "id": "b9d7f735",
    "metadata": {},
    "source": [
-    "At a glance, it seems we will want to dig deeper with **XGBoostClassifier**, **Random Forest**, and **Logistic Regression**"
+    "At a glance, it seems we will want to dig deeper with **XGBoostClassifier**, **Random Forest**, and **K-Nearest Neighbors**"
    ]
   }
  ],
