--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -822,7 +822,7 @@
    "id": "1caa2483",
    "metadata": {},
    "source": [
-    "We will filter in later stages for patient encounters that involve a change in diabetes medication."
+    "We may filter in later stages for patient encounters that involve a change in diabetes medication."
    ]
   },
   {
